<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    tools:context=".AddEditContato">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:padding="@dimen/_5sdp">

<!--        Circulo de imagem do perfil de contato-->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/fotoFile"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_gravity="center"
            android:src="@drawable/baseline_perm_identity_24"
            app:civ_border_width="@dimen/_1sdp"
            app:civ_border_color="@color/colorTextPrimary"/>

        <EditText
            android:id="@+id/nomeEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/background_input_field"
            android:hint="@string/nome"
            android:inputType="textPersonName"
            android:padding="@dimen/_10sdp"
            android:textColorHint="@color/white"
            android:drawableStart="@drawable/baseline_text_fields_24"
            android:drawablePadding="@dimen/_5sdp"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/colorTextSecondary"/>

        <EditText
            android:id="@+id/numeroEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/background_input_field"
            android:hint="@string/numero"
            android:inputType="phone"
            android:padding="@dimen/_10sdp"
            android:textColorHint="@color/white"
            android:drawablePadding="@dimen/_5sdp"
            android:drawableStart="@drawable/baseline_local_phone_24"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/colorTextSecondary"/>

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/background_input_field"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_10sdp"
            android:textColorHint="@color/white"
            android:drawableStart="@drawable/baseline_mail_outline_24"
            android:drawablePadding="@dimen/_5sdp"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/colorTextSecondary"/>
        <EditText
            android:id="@+id/bioEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/obs"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/background_input_field"
            android:inputType="textLongMessage"
            android:padding="@dimen/_10sdp"
            android:textAlignment="center"
            android:textColorHint="@color/white"

            android:drawableStart="@drawable/baseline_edit_note_24"


            android:textSize="@dimen/_14sdp"
            android:textColor="@color/colorTextSecondary"/>





    </LinearLayout>


<!--    // botao que adiciona dados no databese-->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:contentDescription="@string/todo"
        android:elevation="@dimen/_5sdp"
        android:src="@drawable/baseline_add_24"
        app:backgroundTint="#0DA2CF"
        app:pressedTranslationZ="@dimen/_10sdp"
        app:tint="@color/white" />

</RelativeLayout>