<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".DetalheContato">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <ImageView
        android:id="@+id/fotoFileIv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:src="@mipmap/ic_launcher"
        android:scaleType="fitXY"/>
    <TextView
        android:id="@+id/nomeVt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Jowel Ahmed"
        android:textColor="@color/colorTextSecondary"
        android:textStyle="bold"
        android:textSize="@dimen/_16sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"/>

    <TextView
        android:id="@+id/bioTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Isto é para a área de notas Isto é para a área de notas Isto é para a área de notas"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/colorTextSecondary"
        android:textSize="@dimen/_12sdp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:stretchColumns="2">
        <TableRow>
            <TextView
                android:text="@string/numero"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:textColor="@color/colorTextPrimary"/>
            <TextView
                android:id="@+id/telefoneTv"
                tools:text="0177000800"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:padding="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:textColor="@color/colorTextSecondary"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/email"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:textColor="@color/colorTextPrimary"/>
            <TextView
                android:id="@+id/emailTv"
                tools:text="jowel@gmail.com"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:padding="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:textColor="@color/colorTextSecondary"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/time_add"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:textColor="@color/colorTextPrimary"/>
            <TextView
                android:id="@+id/addedTimeTv"
                tools:text="0177000800"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:padding="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:textColor="@color/colorTextSecondary"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/time_update"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:textColor="@color/colorTextPrimary"/>
            <TextView
                android:id="@+id/updatedTimeTv"
                tools:text="0177000800"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:padding="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:textColor="@color/colorTextSecondary"
                />
        </TableRow>

    </TableLayout>
    </LinearLayout>


</RelativeLayout>